--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -41,7 +41,7 @@ neck: identity
 # Image
 img_resize: 256
 img_crop_size: 224
-act_reg: True
+act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
@@ -52,4 +52,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_224_twpool_layer4_max
+output_dir: outputs/tadtr_224_twpool_layer4_avg
