--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -40,8 +40,8 @@ neck: identity
 
 # Image
 # img_resize: 256
-img_crop_size: 160
-act_reg: true
+img_crop_size: 224
+act_reg: false
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
@@ -53,4 +53,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_128
+output_dir: outputs/tadtr_224
