--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -41,7 +41,7 @@ neck: identity
 # Image
 # img_resize: 256
 img_crop_size: 224
-act_reg: false
+act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
