--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -46,10 +46,11 @@ two_stage: false
 mixed_selection: false
 look_forward_twice: false
 
+pooler: avg
 
 # Training
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_224_twpool_layer4_1over4_relu
+output_dir: outputs/tadtr_224_ori
