--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -41,8 +41,8 @@ neck: identity
 # Image
 # img_resize: 256
 # img_crop_size: 224
-# img_resize: 320
-img_crop_size: 320
+img_resize: 320
+img_crop_size: 288
 act_reg: true
 two_stage: false
 mixed_selection: false
