--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -39,8 +39,10 @@ fix_transform: false
 neck: identity
 
 # Image
-img_resize: 256
-img_crop_size: 224
+# img_resize: 256
+# img_crop_size: 224
+img_resize: 290
+img_crop_size: 256
 # img_resize: 320
 # img_crop_size: 288
 act_reg: true
