--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -39,8 +39,12 @@ fix_transform: false
 neck: identity
 
 # Image
-img_resize: 256
-img_crop_size: 224
+# img_resize: 256
+# img_crop_size: 224
+# img_resize: 147
+# img_crop_size: 128
+img_resize: 74
+img_crop_size: 64
 act_reg: true
 two_stage: false
 mixed_selection: false
@@ -53,4 +57,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_224
+output_dir: outputs/tadtr_64
