--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -45,8 +45,10 @@ neck: identity
 # img_crop_size: 192
 # img_resize: 147
 # img_crop_size: 128
-img_resize: 74
-img_crop_size: 64
+img_resize: 110
+img_crop_size: 96
+# img_resize: 74
+# img_crop_size: 64
 act_reg: true
 two_stage: false
 mixed_selection: false
@@ -59,4 +61,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_64_ours
+output_dir: outputs/tadtr_96_ours
