--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -39,21 +39,28 @@ fix_transform: false
 neck: identity
 
 # Image
+img_resize: 290
+img_crop_size: 256
+# img_resize: 320
+# img_crop_size: 288
+# img_resize: 365
+# img_crop_size: 320
+
 # img_resize: 256
 # img_crop_size: 224
 # img_resize: 220
 # img_crop_size: 192
 # img_resize: 147
 # img_crop_size: 128
-img_resize: 110
-img_crop_size: 96
+# img_resize: 110
+# img_crop_size: 96
 # img_resize: 74
 # img_crop_size: 64
 act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-pooler: twpool
+# pooler: twpool
 
 
 # Training
@@ -61,4 +68,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_96_ours
+output_dir: outputs/tadtr_256
