--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -54,10 +54,10 @@ neck: identity
 # img_crop_size: 96
 img_resize: 256
 img_crop_size: 224
-act_reg: false
+act_reg: true
 two_stage: false
 mixed_selection: false
-look_forward_twice: true
+look_forward_twice: false
 
 
 # Training
