--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -52,11 +52,11 @@ two_stage: false
 mixed_selection: false
 look_forward_twice: false
 
-# pooler: avg
+pooler: twpool
 
 # Training
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_224_twpool_1over4_layer4
+output_dir: outputs/tadtr_224_twpool_learnable
