--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -52,7 +52,7 @@ two_stage: false
 mixed_selection: false
 look_forward_twice: false
 
-pooler: twpool
+pooler: avg
 
 # Training
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
