--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -50,7 +50,7 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-pooler: avg
+pooler: twpool
 
 
 # Training
@@ -58,4 +58,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224
+output_dir: outputs/activitynet_tadtr_224_twpool
