--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -42,15 +42,15 @@ neck: identity
 epochs: 12
 lr_step: [9]
 
-# img_resize: 256
-# img_crop_size: 224
-img_resize: 110
-img_crop_size: 96
+img_resize: 256
+img_crop_size: 224
+# img_resize: 110
+# img_crop_size: 96
 act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-pooler: avg
+pooler: twpool
 
 
 # Training
@@ -58,4 +58,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_96_baseline
+output_dir: outputs/activitynet_tadtr_224_ours
