--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -16,7 +16,7 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 enc_layers: 6
 dec_layers: 6
 dim_feedforward: 2048
-num_queries: 10
+num_queries: 50
 dropout: 0.0
 temperature: 10000
 
@@ -31,7 +31,7 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-lr: 0.0001
+lr: 0.00005
 lr_backbone: 0.00001
 batch_size: 4
 set_cost_class: 6
@@ -51,7 +51,7 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-pooler: twpool
+pooler: avg
 
 
 # Training
@@ -59,4 +59,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_ours_deep
+output_dir: outputs/activitynet_tadtr_224_avg_deep
