--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -31,8 +31,10 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-lr: 0.00005
-lr_backbone: 0.00001
+# lr: 0.00005
+lr: 0.0001
+# lr_backbone: 0.00001
+# lr_backbone: 0.00001
 batch_size: 4
 set_cost_class: 2
 
