--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -53,8 +53,8 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-pooler: twpool
-# pooler: avg
+# pooler: twpool
+pooler: avg
 
 
 # Training
@@ -62,4 +62,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_ours
+output_dir: outputs/activitynet_tadtr_224_avg_batch2x4
