--- a/configs/activity_baseline_binary.yml
+++ b/configs/activity_baseline_binary.yml
@@ -42,8 +42,8 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-# pooler: twpool
-pooler: avg
+pooler: twpool
+# pooler: avg
 
 
 
@@ -52,4 +52,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_binary
+output_dir: outputs/activitynet_tadtr_224_twpool_binary
