--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -56,10 +56,12 @@ look_forward_twice: false
 # pooler: twpool
 pooler: avg
 
-
 # Training
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
+
+# Test
+nms_thr: 0.75
 
 # output
 output_dir: outputs/activitynet_tadtr_224_avg_long_not_binary
