--- a/configs/activity_baseline_binary.yml
+++ b/configs/activity_baseline_binary.yml
@@ -23,6 +23,7 @@ input_type: image
 
 # training setting (not finialized)
 lr: 0.00005
+lr_backbone: 0.000001
 batch_size: 4
 set_cost_class: 2
 
@@ -52,4 +53,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_dp01_long_lr_drop
+output_dir: outputs/activitynet_tadtr_224_avg_dp01_long_lr_drop_backbone
