--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -53,6 +53,7 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
+slow_upsample: 2
 # pooler: twpool
 pooler: avg
 
