--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -31,12 +31,12 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-# lr: 0.00005
-lr: 0.0001
-# lr_backbone: 0.00001
+lr: 0.00005
+# lr: 0.0001
+lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
-set_cost_class: 2
+set_cost_class: 6
 
 fix_encoder: false
 fix_transform: false
@@ -53,7 +53,8 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-slow_upsample: 2
+# slow_upsample: 2
+# slow_upsample: 2
 # pooler: twpool
 pooler: avg
 
@@ -65,4 +66,4 @@ rand_erase: false
 nms_thr: 0.75
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_long_not_binary
+output_dir: outputs/activitynet_tadtr_224_avg_long_not_binary_cost6
