--- a/configs/baseline_96.yml
+++ b/configs/baseline_96.yml
@@ -59,8 +59,8 @@ img_crop_size: 96
 act_reg: true
 two_stage: false
 mixed_selection: false
-look_forward_twice: false
-pooler: twpool
+look_forward_twice: true
+pooler: avg
 
 
 # Training
@@ -68,4 +68,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_96_twpool
+output_dir: outputs/tadtr_96_dn
