--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -60,7 +60,7 @@ act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
-pooler: avg
+pooler: twpool
 
 
 # Training
@@ -68,4 +68,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_224_dn
+output_dir: outputs/tadtr_224_dn_twpool
