--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -59,7 +59,7 @@ img_crop_size: 96
 act_reg: true
 two_stage: false
 mixed_selection: false
-look_forward_twice: true
+look_forward_twice: false
 # pooler: twpool
 pooler: avg
 
@@ -69,4 +69,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/tadtr_96_dn
+output_dir: outputs/tadtr_96
