--- a/configs/activity_baseline_binary.yml
+++ b/configs/activity_baseline_binary.yml
@@ -8,7 +8,7 @@ enc_layers: 4
 dec_layers: 4
 dim_feedforward: 2048
 num_queries: 50
-dropout: 0.0
+dropout: 0.1
 temperature: 10000
 
 # data setting
@@ -22,17 +22,19 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-lr: 0.00005
-lr_backbone: 0.000001
+# lr: 0.00005
+lr: 0.0001
+lr_backbone: 0.00005
+# lr_backbone: 0.000001
 batch_size: 4
-set_cost_class: 4
+set_cost_class: 2
 
 fix_encoder: false
 fix_transform: false
 neck: identity
 
-epochs: 16
-lr_step: [14]
+epochs: 12
+lr_step: [9]
 
 img_resize: 256
 img_crop_size: 224
@@ -54,4 +56,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_ffn2048_dp0_cost4
+output_dir: outputs/activitynet_tadtr_224_avg_ffn2048_dp01_cost2
