--- a/configs/activity_baseline_binary.yml
+++ b/configs/activity_baseline_binary.yml
@@ -25,7 +25,7 @@ input_type: image
 lr: 0.00005
 # lr: 0.0001
 # lr_backbone: 0.00005
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 batch_size: 4
 set_cost_class: 2
 
@@ -56,4 +56,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_ori_aug
+output_dir: outputs/activitynet_tadtr_224_avg_ori_aug_no_backbone_decay
