--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -15,9 +15,9 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 2048
+dim_feedforward: 1024
 num_queries: 50
-dropout: 0.0
+dropout: 0.1
 temperature: 10000
 
 # data setting
@@ -33,10 +33,10 @@ input_type: image
 # training setting (not finialized)
 lr: 0.00005
 # lr: 0.0001
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
-set_cost_class: 0
+set_cost_class: 2
 
 fix_encoder: false
 fix_transform: false
@@ -66,4 +66,4 @@ rand_erase: false
 nms_thr: 0.75
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_cost0
+output_dir: outputs/activitynet_tadtr_224_avg
