--- a/configs/activity_baseline_96.yml
+++ b/configs/activity_baseline_96.yml
@@ -31,7 +31,7 @@ input_type: image
 # training setting (not finialized)
 lr: 0.00005
 # lr: 0.0001
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 batch_size: 4
 set_cost_class: 6
 
@@ -39,8 +39,8 @@ fix_encoder: false
 fix_transform: false
 neck: identity
 
-epochs: 16
-lr_step: [14]
+epochs: 12
+lr_step: [9]
 
 # img_resize: 256
 # img_crop_size: 224
@@ -59,4 +59,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_96_cost6_l1_filter
+output_dir: outputs/activitynet_tadtr_avg_96
