--- a/configs/activity_baseline_binary_96.yml
+++ b/configs/activity_baseline_binary_96.yml
@@ -13,7 +13,7 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 2048
+dim_feedforward: 1024
 num_queries: 50
 dropout: 0.1
 temperature: 10000
@@ -31,7 +31,7 @@ input_type: image
 # training setting (not finialized)
 # lr: 0.00005
 lr: 0.0001
-lr_backbone: 0.00005
+# lr_backbone: 0.00005
 batch_size: 4
 set_cost_class: 4
 
@@ -58,5 +58,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_96_avg_binary_ori_aug
+output_dir: outputs/activitynet_tadtr_96_avg_binary
 #dp01_ffn2048_50query_ori_lr
