--- a/configs/activity_baseline_96.yml
+++ b/configs/activity_baseline_96.yml
@@ -13,7 +13,7 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 1024
+dim_feedforward: 2048
 num_queries: 50
 dropout: 0.0
 temperature: 10000
@@ -29,18 +29,18 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-lr: 0.00005
-# lr: 0.0001
+# lr: 0.00005
+lr: 0.0001
 # lr_backbone: 0.000001
 batch_size: 4
-set_cost_class: 6
+set_cost_class: 2
 
 fix_encoder: false
 fix_transform: false
 neck: identity
 
-epochs: 12
-lr_step: [9]
+epochs: 16
+lr_step: [12]
 
 # img_resize: 256
 # img_crop_size: 224
@@ -52,7 +52,7 @@ mixed_selection: false
 look_forward_twice: false
 pooler: avg
 
-nms_thr: 0.8
+# nms_thr: 0.8
 
 # Training
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
