--- a/configs/activity_ours.yml
+++ b/configs/activity_ours.yml
@@ -33,7 +33,7 @@ input_type: image
 # training setting (not finialized)
 lr: 0.00005
 # lr: 0.0001
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
 set_cost_class: 4
@@ -63,13 +63,13 @@ pooler_args:
        input_dim: 2048,
        base_dim: 512,
        num_layers: 4,
-    #    output_dim: 512
+       output_dim: 2048
    }
    - {
        input_dim: 256,
        base_dim: 64,
        num_layers: 4,
-    #    output_dim: 256
+       output_dim: 256
    }
 
 
