--- a/configs/tadtr_224_best.yml
+++ b/configs/tadtr_224_best.yml
@@ -23,6 +23,19 @@ input_type: image
 lr: 0.0001
 # batch_size: 8
 batch_size: 4
+pooler_args:
+   - {
+       input_dim: 2048,
+       base_dim: 512,
+       num_layers: 4,
+      #  output_dim: 2048
+   }
+   - {
+       input_dim: 256,
+       base_dim: 64,
+       num_layers: 4,
+      #  output_dim: 256
+   }
 
 fix_encoder: false
 fix_transform: false
