--- a/configs/tadtr_256_best.yml
+++ b/configs/tadtr_256_best.yml
@@ -28,6 +28,19 @@ fix_encoder: false
 fix_transform: false
 act_reg: true
 pooler: twpool
+pooler_args:
+   - {
+       input_dim: 2048,
+       base_dim: 512,
+       num_layers: 4,
+       output_dim: 2048
+   }
+   - {
+       input_dim: 256,
+       base_dim: 64,
+       num_layers: 4,
+       output_dim: 256
+   }
 
 img_resize: 290
 img_crop_size: 256
