--- a/configs/reproduce.yml
+++ b/configs/reproduce.yml
@@ -60,12 +60,14 @@ pooler_args:
        base_dim: 512,
        num_layers: 4,
        output_dim: 2048,
+       input_tokens: 7,
    }
    - {
        input_dim: 256,
        base_dim: 64,
        num_layers: 4,
        output_dim: 256,
+       input_tokens: 7,
    }
 
 
