--- a/configs/baseline.yml
+++ b/configs/baseline.yml
@@ -68,13 +68,13 @@ pooler_args:
        input_dim: 2048,
        base_dim: 512,
        num_layers: 4,
-       output_dim: 2048
+    #    output_dim: 2048
    }
    - {
        input_dim: 256,
        base_dim: 64,
        num_layers: 4,
-       output_dim: 256
+    #    output_dim: 256
    }
 
 # Training
