--- a/configs/activity_baseline_binary.yml
+++ b/configs/activity_baseline_binary.yml
@@ -22,8 +22,8 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-lr: 0.00005
-# lr: 0.0001
+# lr: 0.00005
+lr: 0.0001
 # lr_backbone: 0.00005
 # lr_backbone: 0.000001
 batch_size: 4
@@ -33,8 +33,10 @@ fix_encoder: false
 fix_transform: false
 neck: identity
 
-epochs: 16
-lr_step: [14]
+# epochs: 16
+epochs: 12
+# lr_step: [14]
+lr_step: [9]
 
 img_resize: 256
 img_crop_size: 224
@@ -56,4 +58,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_long_ori_aug_query30
+output_dir: outputs/activitynet_tadtr_224_avg
