--- a/configs/tadtr_224_best.yml
+++ b/configs/tadtr_224_best.yml
@@ -28,7 +28,7 @@ pooler_args:
        input_dim: 2048,
        base_dim: 512,
        num_layers: 4,
-       output_dim: 2048
+      #  output_dim: 2048
    }
    - {
        input_dim: 256,
