--- a/configs/tadtr_224_best.yml
+++ b/configs/tadtr_224_best.yml
@@ -23,7 +23,7 @@ input_type: image
 lr: 0.0001
 # batch_size: 8
 batch_size: 4
-set_cost_class: 6
+# set_cost_class: 6
 pooler_args:
    - {
        input_dim: 2048,
