--- a/configs/activity_ours_96.yml
+++ b/configs/activity_ours_96.yml
@@ -49,7 +49,7 @@ lr_step: [14]
 # img_crop_size: 224
 img_resize: 110
 img_crop_size: 96
-act_reg: true
+act_reg: false
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
@@ -63,13 +63,13 @@ pooler_args:
        input_dim: 2048,
        base_dim: 512,
        num_layers: 4,
-    #    output_dim: 512
+       output_dim: 2048
    }
    - {
        input_dim: 256,
        base_dim: 64,
        num_layers: 4,
-    #    output_dim: 256
+       output_dim: 256
    }
 
 
@@ -81,4 +81,4 @@ rand_erase: false
 nms_thr: 0.75
 
 # output
-output_dir: outputs/activitynet_tadtr_96_twpool_multi_class
+output_dir: outputs/activitynet_tadtr_96_twpool_multi_class_up
