--- a/configs/activity_ours.yml
+++ b/configs/activity_ours.yml
@@ -49,7 +49,7 @@ img_resize: 256
 img_crop_size: 224
 # img_resize: 110
 # img_crop_size: 96
-act_reg: true
+act_reg: false
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
@@ -62,14 +62,14 @@ pooler_args:
        input_dim: 2048,
        base_dim: 512,
        num_layers: 4,
-    #    output_dim: 2048,
+       output_dim: 2048,
        input_tokens: 7
    }
    - {
        input_dim: 256,
        base_dim: 64,
        num_layers: 4,
-    #    output_dim: 256,
+       output_dim: 256,
        input_tokens: 7
    }
 
