--- a/configs/tadtr_256_best.yml
+++ b/configs/tadtr_256_best.yml
@@ -33,17 +33,19 @@ pooler_args:
        input_dim: 2048,
        base_dim: 512,
        num_layers: 4,
-       output_dim: 2048
+       output_dim: 2048,
+       input_tokens: 8,
    }
    - {
        input_dim: 256,
        base_dim: 64,
        num_layers: 4,
-       output_dim: 256
+       output_dim: 256,
+       input_tokens: 8,
    }
 
 img_resize: 290
 img_crop_size: 256
 
 # output
-output_dir: best/tadtr_256_twpool
+output_dir: best/tadtr_256_twpool_0
