--- a/configs/activity_ours_binary.yml
+++ b/configs/activity_ours_binary.yml
@@ -41,7 +41,7 @@ img_crop_size: 224
 binary: true
 # img_resize: 110
 # img_crop_size: 96
-act_reg: true
+act_reg: false
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
