--- a/configs/activity_baseline_96.yml
+++ b/configs/activity_baseline_96.yml
@@ -13,9 +13,9 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 2048
+dim_feedforward: 1024
 num_queries: 50
-dropout: 0.0
+dropout: 0.1
 temperature: 10000
 
 # data setting
@@ -46,7 +46,7 @@ lr_step: [14]
 # img_crop_size: 224
 img_resize: 110
 img_crop_size: 96
-act_reg: true
+act_reg: false
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
@@ -59,4 +59,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_avg_96_dp0_ffn2048
+output_dir: outputs/activitynet_tadtr_avg_96
