--- a/configs/activity_ours.yml
+++ b/configs/activity_ours.yml
@@ -17,7 +17,7 @@ enc_layers: 4
 dec_layers: 4
 dim_feedforward: 1024
 num_queries: 50
-dropout: 0.1
+dropout: 0.0
 temperature: 10000
 
 # data setting
@@ -36,7 +36,7 @@ lr: 0.00005
 # lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
-set_cost_class: 6
+# set_cost_class: 6
 
 fix_encoder: false
 fix_transform: false
