--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -13,8 +13,8 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 
 
 # model setting
-enc_layers: 6
-dec_layers: 6
+enc_layers: 4
+dec_layers: 4
 dim_feedforward: 2048
 num_queries: 50
 dropout: 0.0
@@ -33,7 +33,7 @@ input_type: image
 # training setting (not finialized)
 # lr: 0.00005
 lr: 0.00005
-# lr_backbone: 0.000001
+lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
 # set_cost_class: 6
@@ -66,4 +66,4 @@ rand_erase: false
 nms_thr: 0.75
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_multi_class_50query_deep
+output_dir: outputs/activitynet_tadtr_224_avg_multi_class_50query_backbone_drop
