--- a/configs/activity_baseline_binary_96.yml
+++ b/configs/activity_baseline_binary_96.yml
@@ -31,7 +31,7 @@ input_type: image
 # training setting (not finialized)
 lr: 0.00005
 # lr: 0.0001
-# lr_backbone: 0.00005
+lr_backbone: 0.000001
 batch_size: 4
 
 fix_encoder: false
@@ -57,5 +57,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_96_avg_binary
+output_dir: outputs/activitynet_tadtr_96_avg_binary_backbone_drop
 #dp01_ffn2048_50query_ori_lr
