--- a/configs/activity_ours_binary.yml
+++ b/configs/activity_ours_binary.yml
@@ -6,9 +6,9 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 1024
+dim_feedforward: 2048
 num_queries: 50
-dropout: 0.1
+dropout: 0.0
 temperature: 10000
 
 # data setting
@@ -22,10 +22,10 @@ test_slice_overlap: 0
 input_type: image
 
 # training setting (not finialized)
-# lr: 0.00005
-lr: 0.0001
+lr: 0.00005
+# lr: 0.0001
 batch_size: 4
-set_cost_class: 4
+# set_cost_class: 4
 
 fix_encoder: false
 fix_transform: false
@@ -64,8 +64,8 @@ pooler_args:
 
 
 # Training
-rand_augment_param: rand-m7-n4-mstd0.5-inc1
+rand_augment_param: rand-m8-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_ours
+output_dir: outputs/activitynet_tadtr_224_ours_ffn2048_dp0
