--- a/configs/activity_baseline.yml
+++ b/configs/activity_baseline.yml
@@ -33,7 +33,7 @@ input_type: image
 # training setting (not finialized)
 # lr: 0.00005
 lr: 0.00005
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
 # set_cost_class: 6
@@ -59,11 +59,11 @@ look_forward_twice: false
 pooler: avg
 
 # Training
-rand_augment_param: rand-m7-n4-mstd0.5-inc1
+rand_augment_param: rand-m8-n4-mstd0.5-inc1
 rand_erase: false
 
 # Test
 nms_thr: 0.75
 
 # output
-output_dir: outputs/activitynet_tadtr_224_avg_multi_class_50query_backbone_drop
+output_dir: outputs/activitynet_tadtr_224_avg_multi_class_50query
