--- a/configs/activity_ours.yml
+++ b/configs/activity_ours.yml
@@ -33,7 +33,7 @@ input_type: image
 # training setting (not finialized)
 # lr: 0.00005
 lr: 0.00005
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 # lr_backbone: 0.00001
 batch_size: 4
 # set_cost_class: 6
