--- a/configs/activity_baseline_binary_96.yml
+++ b/configs/activity_baseline_binary_96.yml
@@ -13,9 +13,9 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 1024
+dim_feedforward: 2048
 num_queries: 50
-dropout: 0.1
+dropout: 0.0
 temperature: 10000
 
 # data setting
@@ -31,7 +31,7 @@ input_type: image
 # training setting (not finialized)
 lr: 0.00005
 # lr: 0.0001
-lr_backbone: 0.000001
+# lr_backbone: 0.000001
 batch_size: 4
 
 fix_encoder: false
@@ -57,5 +57,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_96_avg_binary_backbone_drop
+output_dir: outputs/activitynet_tadtr_96_avg_binary_ffn2028_dp0
 #dp01_ffn2048_50query_ori_lr
