--- a/configs/activity_ours_binary.yml
+++ b/configs/activity_ours_binary.yml
@@ -41,7 +41,7 @@ img_crop_size: 224
 binary: true
 # img_resize: 110
 # img_crop_size: 96
-act_reg: false
+act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
@@ -68,4 +68,4 @@ rand_augment_param: rand-m8-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_ours_binary
+output_dir: outputs/activitynet_tadtr_224_ours_binary_act_reg
