--- a/configs/activity_ours_binary.yml
+++ b/configs/activity_ours_binary.yml
@@ -14,9 +14,11 @@ temperature: 10000
 # data setting
 dataset_name: activitynet
 # feature: img10fps
-feature: 384frames
+# feature: 384frames
+feature: 768frames
 online_slice: false
-slice_len: 384
+# slice_len: 384
+slice_len: 768
 slice_overlap: 0
 test_slice_overlap: 0
 input_type: image
@@ -68,4 +70,4 @@ rand_augment_param: rand-m8-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/activitynet_tadtr_224_ours_binary_long
+output_dir: outputs/activitynet_tadtr_224_ours_binary_long_768
