--- a/configs/activity_ours.yml
+++ b/configs/activity_ours.yml
@@ -15,7 +15,7 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 2048
+dim_feedforward: 1024
 num_queries: 50
 dropout: 0.0
 temperature: 10000
@@ -23,9 +23,11 @@ temperature: 10000
 # data setting
 dataset_name: activitynet
 # feature: img10fps
-feature: 384frames
+# feature: 384frames
+feature: 768frames
 online_slice: false
-slice_len: 384
+# slice_len: 384
+slice_len: 768
 slice_overlap: 0
 test_slice_overlap: 0
 input_type: image
@@ -82,4 +84,4 @@ rand_erase: false
 nms_thr: 0.75
 
 # output
-output_dir: outputs/activitynet_tadtr_224_twpool_multi_class_50query_backbone_drop
+output_dir: outputs/activitynet_tadtr_224_twpool_multi_class_768
