--- a/configs/activity_ours.yml
+++ b/configs/activity_ours.yml
@@ -51,7 +51,7 @@ img_resize: 256
 img_crop_size: 224
 # img_resize: 110
 # img_crop_size: 96
-act_reg: false
+act_reg: true
 two_stage: false
 mixed_selection: false
 look_forward_twice: false
