--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -50,10 +50,10 @@ neck: identity
 # Image
 # img_resize: 440
 # img_crop_size: 384
-# img_resize: 110
-# img_crop_size: 96
-img_resize: 256
-img_crop_size: 224
+img_resize: 110
+img_crop_size: 96
+# img_resize: 256
+# img_crop_size: 224
 
 act_reg: true
 seg_refine: true
@@ -71,7 +71,7 @@ test_interval: 1
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
-hidden_dim: 512
+# hidden_dim: 256
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_condition_batch8_hidden512
+output_dir: outputs/thumos14_e2e_slowfast_10fps_condition_batch8_96
