--- a/configs/tadtr_224_best_albation.yml
+++ b/configs/tadtr_224_best_albation.yml
@@ -51,7 +51,7 @@ look_forward_twice: true
 
 fix_encoder: false
 fix_transform: false
-pooler: avg
+pooler: twpool
 
 img_resize: 256
 img_crop_size: 224
@@ -59,5 +59,5 @@ nms_thr: 0.5
 
 # output
 # output_dir: outputs/tadtr_224_twpool
-output_dir: outputs/tadtr_224_avg
+output_dir: outputs/tadtr_224_twpool_no_attn
 # output_dir: randaug/tadtr_224_m7-n4
