--- a/configs/tadtr_224_best.yml
+++ b/configs/tadtr_224_best.yml
@@ -32,16 +32,16 @@ batch_size: 4
 pooler_args:
    - {
        input_dim: 2048,
-      #  base_dim: 256,
-       base_dim: 1024,
-       num_layers: 4,
+       base_dim: 256,
+      #  base_dim: 1024,
+       num_layers: 2,
        output_dim: 2048
    }
    - {
        input_dim: 256,
-       base_dim: 128,
-      #  base_dim: 32,
-       num_layers: 4,
+      #  base_dim: 128,
+       base_dim: 32,
+      #  num_layers: 2,
        output_dim: 256
    }
 
