--- a/configs/tadtr_224_best.yml
+++ b/configs/tadtr_224_best.yml
@@ -41,7 +41,7 @@ pooler_args:
        input_dim: 256,
       #  base_dim: 128,
        base_dim: 32,
-      #  num_layers: 2,
+       num_layers: 2,
        output_dim: 256
    }
 
